--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.2",
+    "react-markdown": "^10.1.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.6.0",
