--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-vertical-timeline-component": "^3.6.0",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
@@ -46,6 +47,7 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
